	Species wasn't including the default base for loading the Fitness.  Fixed.
		Thanks to Peter Drake <drake@lclark.edu>
	Tweak to Console to fix parameters not being updated properly.  Thanks to
		Bob Orchard <Bob.Orchard@nrc-cnrc.gc.ca>
	Eliminated the 'store' and 'flush' parameter options.  You can still modify
		the Output's behavior programatically.  This change was long
		overdue: these two features just added complexity to an already too
		complex parameter file. 

19	Best. Prerelease. Ever.
	Modified ParameterDatabase's parseInt and parseLong methods to allow double
		values ending in .0 to serve as legal numbers.
	Added Keith Sullivan to the contributors list
	Added GraphViz output to GP trees
	Bug fix in mixed-up warning messages in GPNodeBuilder
	Fixed Tutorial3 to reflect new population writing format.  Thanks to
		Myron Tuttle <myrongt@gmail.com>
	Added ec.util.LocalHost class to replace known bug in Java's getLocalHost
		method.  This class relies on the NetworkInterface class in
		Java 1.4, which is going to bump ECJ to require 1.4.  Thanks to 
		Tomasz Nowak <nowak2000@poczta.onet.pl>
	Bumped classfile version in Makefile to 1.4 accordingly.
	Fixed erroneous documentation in FloatVectorSpecies and IntegerVectorSpecies
	Slight modification of spea2.Subpopulation.setup() archive size allowance,
		thanks to Yow Tzu <yowtzu@cs.york.ac.uk>
	eval.masterproblem must now be a proper subclass of ec.eval.MasterProblem
	Problem.java documentation updated
	removed vestigial canEaluate() from Problem.java
	Added getDouble(...) and getFloat(...) to ParameterDatabase.java, thanks to 
		Krzysztof Krawiec <krzysztof.krawiec@cs.put.poznan.pl>
	Made IPEInformation static and serializable.  Thanks to Michael Hart
		<michael.hart.au@gmail.com>
	PSOBreeder now considers multiple subpopulation.s  Thanks to Michael Hart
                <michael.hart.au@gmail.com>
	Removed vestigial GPFuncInfo.java.gz.  Thanks to David Oranchak 
		<doranchak@cox.net>