@@ -51,7 +51,7 @@ As far as GP systems go, this is a big one.  It sports a number of packages for 
 
 <h3>Design Patterns</h3>
 
-<p>At the most abstract level are five <i>design pattern interfaces</i> which guide the overall syntactic design of most all other classes in the system.  The topmost design pattern is <b>Setup</b>, which is <c>java.io.Serialiable</c> (nearly every class in the system must be serializable in order for checkpointing to work).  <c>Setup</c> defines a single method, <tt>setup(...)</tt>, which is called near the beginning of an evolutionary run to allow an object to set itself up from <c>ec.util.Parameter</c>s stored in the <c>ec.util.ParameterDatabase</c>.
+<p>At the most abstract level are five <i>design pattern interfaces</i> which guide the overall syntactic design of most all other classes in the system.  The topmost design pattern is <b>Setup</b>, which is <c>java.io.Serializable</c> (nearly every class in the system must be serializable in order for checkpointing to work).  <c>Setup</c> defines a single method, <tt>setup(...)</tt>, which is called near the beginning of an evolutionary run to allow an object to set itself up from <c>ec.util.Parameter</c>s stored in the <c>ec.util.ParameterDatabase</c>.
 
 <p><b>Singleton</b> is a <c>Setup</c> which defines classes which have only a single global instance throughout the evolutionary run.  <b>Clique</b> is a <c>Setup</c> which defines classes which contain a small set of instances which are considered unique from each other, and which each get <tt>setup(...)</tt> seperately.  For example, the set of GP types (<c>ec.gp.GPType</c>) is a <c>Clique</c>.  <c>Clique</c>s typically have a centralized static <c>java.util.Hashtable</c> which holds all member instances of the <c>Clique</c>.  <b>Prototype</b> is a <c>Setup</c> which defines classes whose instances are commonly created not with <tt>new</tt> but through cloning a single unused <i>prototypical instance</i> with <tt>clone()</tt>.  The prototypical instance receives a single (usually) call to <tt>setup(...)</tt>; thereafter all cloned instances do not get called <tt>setup(...)</tt>.  <c>Prototype</c>s are very common objects in the system, used for nearly everything that must be allocated a very many number of times (<c>Individual</c>s, for example).  Lastly, <b>Group</b> is a <c>Setup</c> which defines classes very much like <c>Prototype</c>s, but have prototypical instances which must be used.  <c>Population</c>, for example, is a <c>Group</c> because a prototypical instance would be very large and expensive to stash away only for the purpose of cloning other <c>Population</c>s.
 
