@@ -320,7 +320,9 @@ public class MaxOnes extends Problem implements SimpleProblemForm
 <tt><pre>
     public void describe(final Individual ind, 
                          final EvolutionState state, 
-                         final int threadnum, final int log,
+                         final int subpopulation,
+                         final int threadnum, 
+                         final int log,
                          final int verbosity)
         {
         }
